--- a/views/une-autre-page.hbs
+++ b/views/une-autre-page.hbs
@@ -6,3 +6,7 @@
     deleniti provident sint ut, dolores repellat facilis optio fugit veritatis odit. Magni eaque placeat voluptatibus
     maxime.
 </p>
+
+<script>
+    
+</script>
