--- a/views/index.hbs
+++ b/views/index.hbs
@@ -7,3 +7,34 @@
     deleniti provident sint ut, dolores repellat facilis optio fugit veritatis odit. Magni eaque placeat voluptatibus
     maxime.
 </p>
+<script type="text/javascript">
+console.log('coucou')
+
+const APIKEY = `xxxxxxxxxx`
+
+let apicall = fucntion(city) {
+    let url = `https://api.openweathermap.org/data/2.5/weather?q=${city}&appid=xxxxx&units=metric&lang=fr;`;
+
+    fetch(url).then((response) => response.json
+    .then((data) => {
+        console.log(data);
+        document.querySelevtor(`#city`).innerHTML = data.name;
+        document.querySelevtor(`#temp`).innerHTML = data.main.temp + `°`;
+        document.querySelevtor(`#humidity`).innerHTML = data.main.humidity;
+        document.querySelevtor(`#wind`).innerHTML = data.wind.speed + `km/h`;
+        });
+    );
+
+    .catch((err) => console.log(`Erreur :` + err));
+
+    document.querySelevtor(`form`).addEventSelector(`submit`, function(e) {
+    e.preventDefault();
+    let ville = document.querySelector(`#inputCity`).value;
+
+    apicall(ville);
+    });
+};
+
+apicall(Toulouse);
+
+</script>
