--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,3 +1,29 @@
+<div class="container">
+    <div class="row justify-content-center">
+        <div class="col-12 my-3">
+            <form>
+                <div class="form-group">
+                    <input type="text" class="form-control" id="inputCity">
+                </div>
+
+                <button type="submit" class="btn btn-info btn-block">
+                    Rechercher
+                </button>
+            </form>
+        </div>
+
+        <div class="col-12 d-flex justify-content-center my-3">
+            <div class="box-container">
+                <div id="city" class="box"></div>
+                <div id="temp" class="box"></div>
+                <div id="humidity" class="box"></div>
+                <div id="wind" class="box"></div>
+            </div>
+        </div>
+    </div>
+</div>
+
+
 <h1>
     premiere page
 </h1>
@@ -18,10 +44,10 @@ let apicall = fucntion(city) {
     fetch(url).then((response) => response.json
     .then((data) => {
         console.log(data);
-        document.querySelevtor(`#city`).innerHTML = data.name;
-        document.querySelevtor(`#temp`).innerHTML = data.main.temp + `°`;
-        document.querySelevtor(`#humidity`).innerHTML = data.main.humidity;
-        document.querySelevtor(`#wind`).innerHTML = data.wind.speed + `km/h`;
+        document.querySelector(`#city`).innerHTML = data.name;
+        document.querySelector(`#temp`).innerHTML = data.main.temp + `°`;
+        document.querySelector(`#humidity`).innerHTML = data.main.humidity;
+        document.querySelector(`#wind`).innerHTML = data.wind.speed + `km/h`;
         });
     );
 
