--- a/assets/styles.css
+++ b/assets/styles.css
@@ -25,7 +25,7 @@ h1 {
     justify-content: center;
     align-items: center;
     font-size: 1.5rem;
-    color: white;
+    color: black;
 }
 
 #city {
