--- a/assets/styles.css
+++ b/assets/styles.css
@@ -1,5 +1,5 @@
 body {
-    background-image: url(public/assets/img/meteo.jpg);
+    background-image: url(/public/img/photo4.jpg);
     background-size: cover;
     background-repeat: no-repeat;
     min-height: 100vh;
