--- a/assets/styles.css
+++ b/assets/styles.css
@@ -30,20 +30,20 @@ h1 {
 
 #city {
     background-color: rgba(43, 128, 145, 0.75);
-   
+    border-top-left-radius: 30px 30px;
 }
 
  #temp {
     background-color: rgba(43, 78, 101, 0.75);
-  
+    border-top-right-radius: 30px 30px;
  }
 
  #humidity {
     background-color: rgba(52, 152, 219, 0.75);
-    
+    border-bottom-left-radius: 30px 30px;
  }
 
  #wind {
     background-color: rgba(143, 146, 154, 0.75);
-    
+    border-bottom-right-radius: 30px 30px;
  }
