--- a/views/partials/navbar.hbs
+++ b/views/partials/navbar.hbs
@@ -8,10 +8,10 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav mr-auto">
                 <li class="nav-item">
-                    <a class="nav-link {{#if index}} active {{/if}}" href="/">Home <span class="sr-only">(current)</span></a>
+                    <a class="nav-link {{#if index}} active {{/if}}" href="/">Présentation API <span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link {{#if page2}} active {{/if}}" href="/une-autre-page">Page 2</a>
+                    <a class="nav-link {{#if page2}} active {{/if}}" href="/une-autre-page">API Météo</a>
                 </li>
                  <li class="nav-item">
                     <a class="nav-link {{#if page3}} active {{/if}}" href="/encore-une-autre-page">Page 3</a>
