--- a/assets/styles.css
+++ b/assets/styles.css
@@ -1,5 +1,5 @@
 body {
-    background-image: url(/public/img/photo4.jpg);
+    background-image: url(/public/img/background-API.jpg);
     background-size: cover;
     background-repeat: no-repeat;
     min-height: 100vh;
@@ -8,6 +8,17 @@ body {
 h1 {
     text-align: center;
     margin: 0;
+}
+
+label {
+    background-color: white;
+    font-size: 18px;
+    font-weight: bold;
+  }
+
+#unknownName {
+    color: red;
+    font-weight: bold;
 }
 
 .box-container {
@@ -33,7 +44,7 @@ h1 {
     border-top-left-radius: 30px 30px;
 }
 
- #temp {
+#temp {
     background-color: rgba(43, 78, 101, 0.75);
     border-top-right-radius: 30px 30px;
  }
