--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,29 +1,25 @@
 <h1>
-    METEO
+    Présentation APi météo
 </h1>
 
-    <div class="container">
-        <div class="row justify-content-center">
-            <div class="col-12 col-sm-6 my-3">
-                <form id="form">
-                    <div class="form-group">
-                        <input type="text" class="form-control" id="inputCity">
-                    </div>
-                    <button type="submit" class="btn btn-info btn-block">
-                        Recherche
-                    </button>
-                </form>
-            </div>
-
-            <div class="col-12 col-sm-6 d-flex justify-content-center my-3">
-                <div class="box-container">
-                    <div id="city" class="box"></div>
-                    <div id="temp" class="box"></div>
-                    <div id="humidity" class="box"></div>
-                    <div id="wind" class="box"></div>
-                </div>
-            </div>
-        </div>
-    </div>
-
-<script src="/public/js/app.js"></script> 
+<h3>
+    Qu'est-ce une API ?
+</h3>
+<p>
+    Lorem ipsum, dolor sit amet consectetur adipisicing elit. Commodi dolorum cupiditate placeat ipsa eius quibusdam alias voluptates ad quis, laudantium optio aliquid fugiat recusandae veniam vero necessitatibus doloribus porro tempore.
+    Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati repudiandae molestiae, qui, enim voluptates blanditiis suscipit itaque numquam accusamus molestias facere nihil ipsa. Praesentium obcaecati facere dicta ab necessitatibus? Dolore!
+    Lorem ipsum dolor sit amet consectetur adipisicing elit. Sapiente numquam molestiae reprehenderit enim sit illo laboriosam voluptatibus nam commodi earum nisi, nulla odio suscipit libero temporibus ut minus tempora? Tempora.
+</p>
+<br>
+<h3>
+    Notre API
+</h3>
+<p>
+    Lorem ipsum, dolor sit amet consectetur adipisicing elit. Commodi dolorum cupiditate placeat ipsa eius quibusdam alias voluptates ad quis, laudantium optio aliquid fugiat recusandae veniam vero necessitatibus doloribus porro tempore.
+    Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati repudiandae molestiae, qui, enim voluptates blanditiis suscipit itaque numquam accusamus molestias facere nihil ipsa. Praesentium obcaecati facere dicta ab necessitatibus? Dolore!
+    Lorem ipsum dolor sit amet consectetur adipisicing elit. Sapiente numquam molestiae reprehenderit enim sit illo laboriosam voluptatibus nam commodi earum nisi, nulla odio suscipit libero temporibus ut minus tempora? Tempora.
+</p>
+<br>
+<h3>
+    Lien vers l'API
+</h3>
